force-app/main/default/objects/property__c/property__c.object-meta.xml
<CustomObject>
    <label>CS物件</label>
    <nameField>
        <label>物件名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>