force-app/main/default/objects/property__c/fields/Actual_Count__c.field-meta.xml
<CustomField>
    <fullName>Actual_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>実績件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>