force-app/main/default/objects/property__c/fields/Actual_Month_Key__c.field-meta.xml
<CustomField>
    <fullName>Actual_Month_Key__c</fullName>
    <formula>DATE(
  YEAR( DATEVALUE(CreatedDate) ),
  MONTH( DATEVALUE(CreatedDate) ),
  1
)</formula>
    <label>実績月キー</label>
    <type>Date</type>
</CustomField>