force-app/main/default/objects/property__c/fields/ApproachStatus__c.field-meta.xml
<CustomField>
    <fullName>ApproachStatus__c</fullName>
    <label>制作担当者アプローチ状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未アプローチ</fullName>
            </value>
            <value>
                <fullName>アポ取り中</fullName>
            </value>
            <value>
                <fullName>訪問済み</fullName>
            </value>
            <value>
                <fullName>接触できなかった</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>