force-app/main/default/objects/property__c/fields/bulkUpd__c.field-meta.xml
<CustomField>
    <fullName>bulkUpd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>一括更新用項目</label>
    <type>Checkbox</type>
</CustomField>