force-app/main/default/objects/property__c/fields/ChangeStatusDate__c.field-meta.xml
<CustomField>
    <fullName>ChangeStatusDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>元請物件ステータス変更日</label>
    <type>Date</type>
</CustomField>