force-app/main/default/objects/property__c/fields/clientCompDateNextProperty__c.field-meta.xml
<CustomField>
    <fullName>clientCompDateNextProperty__c</fullName>
    <label>次回担当物件-竣工日</label>
    <type>Date</type>
</CustomField>