force-app/main/default/objects/property__c/fields/clientNextProperty__c.field-meta.xml
<CustomField>
    <fullName>clientNextProperty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元請現場担当者-次回担当物件</label>
    <referenceTo>property__c</referenceTo>
    <relationshipName>property_clientNextProperty</relationshipName>
    <type>Lookup</type>
</CustomField>