force-app/main/default/objects/property__c/fields/clientTargetDateNextProperty__c.field-meta.xml
<CustomField>
    <fullName>clientTargetDateNextProperty__c</fullName>
    <label>次回担当物件-着工日</label>
    <type>Date</type>
</CustomField>