force-app/main/default/objects/property__c/fields/CS_hasseibi__c.field-meta.xml
<CustomField>
    <fullName>CS_hasseibi__c</fullName>
    <label>発生日</label>
    <type>Date</type>
</CustomField>