force-app/main/default/objects/property__c/fields/CS_kenzaisentei__c.field-meta.xml
<CustomField>
    <fullName>CS_kenzaisentei__c</fullName>
    <defaultValue>false</defaultValue>
    <label>建材選定サービス</label>
    <type>Checkbox</type>
</CustomField>