force-app/main/default/objects/property__c/fields/CS_konpekekkahanmeibi__c.field-meta.xml
<CustomField>
    <fullName>CS_konpekekkahanmeibi__c</fullName>
    <label>コンペ結果判明日</label>
    <type>Date</type>
</CustomField>