force-app/main/default/objects/property__c/fields/CS_MailSend__c.field-meta.xml
<CustomField>
    <fullName>CS_MailSend__c</fullName>
    <formula>AND(
				OR( zyutyusaki__r.CS_ImportantCon__c , zouhougen__r.CS_ImportantInfo__c )
,  tyakkoubi30__c 
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS_アラートメール送信対象</label>
    <type>Checkbox</type>
</CustomField>