force-app/main/default/objects/property__c/fields/CS_MailSendFlg__c.field-meta.xml
<CustomField>
    <fullName>CS_MailSendFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS_アラートメール送信済</label>
    <type>Checkbox</type>
</CustomField>