force-app/main/default/objects/property__c/fields/CS_PropertLastActivity__c.field-meta.xml
<CustomField>
    <fullName>CS_PropertLastActivity__c</fullName>
    <label>物件最終更新日</label>
    <type>Date</type>
</CustomField>