force-app/main/default/objects/property__c/fields/CS_PropertyCoverageRate__c.field-meta.xml
<CustomField>
    <fullName>CS_PropertyCoverageRate__c</fullName>
    <label>CS_物件把握率</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>