force-app/main/default/objects/property__c/fields/CS_PropertyWinRate__c.field-meta.xml
<CustomField>
    <fullName>CS_PropertyWinRate__c</fullName>
    <label>CS_物件受注率</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>