force-app/main/default/objects/property__c/fields/CS_sekoukaisyahanmeibi__c.field-meta.xml
<CustomField>
    <fullName>CS_sekoukaisyahanmeibi__c</fullName>
    <label>施工会社判明日</label>
    <type>Date</type>
</CustomField>