force-app/main/default/objects/property__c/fields/CS_sesyu__c.field-meta.xml
<CustomField>
    <fullName>CS_sesyu__c</fullName>
    <label>施主</label>
    <length>200</length>
    <type>Text</type>
</CustomField>