force-app/main/default/objects/property__c/fields/CS_StrategyCategory2__c.field-meta.xml
<CustomField>
    <fullName>CS_StrategyCategory2__c</fullName>
    <formula>TEXT( zyutyusaki__r.CS_sennryakukubun__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>元請_戦略区分</label>
    <type>Text</type>
</CustomField>