force-app/main/default/objects/property__c/fields/CS_syoukaizumi__c.field-meta.xml
<CustomField>
    <fullName>CS_syoukaizumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>紹介済み（川上営業）</label>
    <type>Checkbox</type>
</CustomField>