force-app/main/default/objects/property__c/fields/CS_syozokubusyo__c.field-meta.xml
<CustomField>
    <fullName>CS_syozokubusyo__c</fullName>
    <label>所属部署</label>
    <length>100</length>
    <type>Text</type>
</CustomField>