force-app/main/default/objects/property__c/fields/CS_target__c.field-meta.xml
<CustomField>
    <fullName>CS_target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>重要物件</label>
    <type>Checkbox</type>
</CustomField>