force-app/main/default/objects/property__c/fields/CW_bukkenphase__c.field-meta.xml
<CustomField>
    <fullName>CW_bukkenphase__c</fullName>
    <label>物件フェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>デザイン中</fullName>
            </value>
            <value>
                <fullName>デザイン確定</fullName>
            </value>
            <value>
                <fullName>デザインコンペ中</fullName>
            </value>
            <value>
                <fullName>施工入札中</fullName>
            </value>
            <value>
                <fullName>デザインのみ受注</fullName>
            </value>
            <value>
                <fullName>施工共に受注</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>