force-app/main/default/objects/property__c/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <formula>TEXT(zyutyusakigenbatantousya__r.CS_StrategyPriority__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ターゲットフラグ</label>
    <type>Text</type>
</CustomField>