force-app/main/default/objects/property__c/fields/Field4__c.field-meta.xml
<CustomField>
    <fullName>Field4__c</fullName>
    <formula>AND(
  ISBLANK(tyakkoubi__c), 
  DATEVALUE(CreatedDate) &gt;= ADDMONTHS(DATE(YEAR(TODAY()), MONTH(TODAY()), 1), -1), 
  DATEVALUE(CreatedDate) &lt;  ADDMONTHS(DATE(YEAR(TODAY()), MONTH(TODAY()), 1),  1) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>着工日未入力数式</label>
    <type>Checkbox</type>
</CustomField>