force-app/main/default/objects/property__c/fields/HighPriority__c.field-meta.xml
<CustomField>
    <fullName>HighPriority__c</fullName>
    <defaultValue>false</defaultValue>
    <label>優先度高</label>
    <type>Checkbox</type>
</CustomField>