force-app/main/default/objects/property__c/fields/HighPriorityEquation__c.field-meta.xml
<CustomField>
    <fullName>HighPriorityEquation__c</fullName>
    <formula>OR(
  HighPriority__c = TRUE,
  AND(
    Priority__c = &quot;A&quot;,
    NOT(ISBLANK(tyakkoubi__c)),
    tyakkoubi__c &gt;= DATE(YEAR(TODAY()), MONTH(TODAY()), 1),
    tyakkoubi__c &lt; ADDMONTHS(DATE(YEAR(TODAY()), MONTH(TODAY()), 1), 4)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>優先度高（数式）</label>
    <type>Checkbox</type>
</CustomField>