force-app/main/default/objects/property__c/fields/kakuteimaezyouhou_kanrenkaisya__c.field-meta.xml
<CustomField>
    <fullName>kakuteimaezyouhou_kanrenkaisya__c</fullName>
    <label>確定前情報_関連会社</label>
    <length>200</length>
    <type>Text</type>
</CustomField>