force-app/main/default/objects/property__c/fields/Kawakami__c.field-meta.xml
<CustomField>
    <fullName>Kawakami__c</fullName>
    <defaultValue>false</defaultValue>
    <label>川上</label>
    <type>Checkbox</type>
</CustomField>