force-app/main/default/objects/property__c/fields/MEMO__c.field-meta.xml
<CustomField>
    <fullName>MEMO__c</fullName>
    <label>ネクストアクション等メモ</label>
    <type>TextArea</type>
</CustomField>