force-app/main/default/objects/property__c/fields/Month_Key__c.field-meta.xml
<CustomField>
    <fullName>Month_Key__c</fullName>
    <formula>DATE(YEAR(Target_Month__c), MONTH(Target_Month__c), 1)</formula>
    <label>管理月キー（数式）</label>
    <type>Date</type>
</CustomField>