force-app/main/default/objects/property__c/fields/No_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>No_Opportunity__c</fullName>
    <formula>OpportunityCount__c = 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談無し</label>
    <type>Checkbox</type>
</CustomField>