force-app/main/default/objects/property__c/fields/Opp__c.field-meta.xml
<CustomField>
    <fullName>Opp__c</fullName>
    <label>商談内容</label>
    <type>TextArea</type>
</CustomField>