force-app/main/default/objects/property__c/fields/oyaID__c.field-meta.xml
<CustomField>
    <fullName>oyaID__c</fullName>
    <label>親ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>