force-app/main/default/objects/property__c/fields/Point_zyutyusaki__c.field-meta.xml
<CustomField>
    <fullName>Point_zyutyusaki__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ポイント(元請)</label>
    <referenceTo>Point__c</referenceTo>
    <relationshipName>Point_zyutyusaki</relationshipName>
    <type>Lookup</type>
</CustomField>