force-app/main/default/objects/property__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>TEXT(zyutyusakigenbatantousya__r.CS_StrategyPriority__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>元請現場担当者攻略優先度</label>
    <type>Text</type>
</CustomField>