force-app/main/default/objects/property__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>IF(
  Target_Count__c = 0,
  0,
  Actual_Count__c / Target_Count__c
)</formula>
    <label>進捗率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>