force-app/main/default/objects/property__c/fields/PropertyOrderDenominator__c.field-meta.xml
<CustomField>
    <fullName>PropertyOrderDenominator__c</fullName>
    <label>物件受注率_分母</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>