force-app/main/default/objects/property__c/fields/PropertyOrderNumerator__c.field-meta.xml
<CustomField>
    <fullName>PropertyOrderNumerator__c</fullName>
    <label>物件受注率_分子</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>