force-app/main/default/objects/property__c/fields/PropertyOrderRate__c.field-meta.xml
<CustomField>
    <fullName>PropertyOrderRate__c</fullName>
    <label>物件受注率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>