force-app/main/default/objects/property__c/fields/PropertyTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>PropertyTotalAmount__c</fullName>
    <label>物件計受注金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>