force-app/main/default/objects/property__c/fields/PropertyUnderstandingNumerator__c.field-meta.xml
<CustomField>
    <fullName>PropertyUnderstandingNumerator__c</fullName>
    <label>物件把握率_分子</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>