force-app/main/default/objects/property__c/fields/PropertyUnderstandingRate__c.field-meta.xml
<CustomField>
    <fullName>PropertyUnderstandingRate__c</fullName>
    <label>物件把握率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>