force-app/main/default/objects/property__c/fields/PropertyVolume__c.field-meta.xml
<CustomField>
    <fullName>PropertyVolume__c</fullName>
    <description>物件の規模</description>
    <label>物件の規模</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>