force-app/main/default/objects/property__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>元請物件ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未接触</fullName>
            </value>
            <value>
                <fullName>接触済み</fullName>
            </value>
            <value>
                <fullName>受注</fullName>
            </value>
            <value>
                <fullName>失注</fullName>
            </value>
            <value>
                <fullName>販売可能商品無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>