force-app/main/default/objects/property__c/fields/SuccessProperty__c.field-meta.xml
<CustomField>
    <fullName>SuccessProperty__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL( Status__c, &quot;受注&quot;),
    Field5__c &gt;= 1
  ),
  1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>受注物件</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>