force-app/main/default/objects/property__c/fields/syunkoubi__c.field-meta.xml
<CustomField>
    <fullName>syunkoubi__c</fullName>
    <label>竣工日</label>
    <type>Date</type>
</CustomField>