force-app/main/default/objects/property__c/fields/Target_Count__c.field-meta.xml
<CustomField>
    <fullName>Target_Count__c</fullName>
    <label>目標件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>