force-app/main/default/objects/property__c/fields/Target_Month__c.field-meta.xml
<CustomField>
    <fullName>Target_Month__c</fullName>
    <label>管理月</label>
    <type>Date</type>
</CustomField>