force-app/main/default/objects/property__c/fields/tyakkoubi30__c.field-meta.xml
<CustomField>
    <fullName>tyakkoubi30__c</fullName>
    <formula>tyakkoubi__c - TODAY() = 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>着工日30日前</label>
    <type>Checkbox</type>
</CustomField>