force-app/main/default/objects/property__c/fields/tyakkoubi__c.field-meta.xml
<CustomField>
    <fullName>tyakkoubi__c</fullName>
    <label>着工日</label>
    <type>Date</type>
</CustomField>