force-app/main/default/objects/property__c/fields/zouhougen__c.field-meta.xml
<CustomField>
    <fullName>zouhougen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>情報源</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>zouhougen</relationshipName>
    <type>Lookup</type>
</CustomField>