force-app/main/default/objects/property__c/fields/zyouhouteikyousya__c.field-meta.xml
<CustomField>
    <fullName>zyouhouteikyousya__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>情報提供者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>zyouhouteikyousya</relationshipName>
    <type>Lookup</type>
</CustomField>