force-app/main/default/objects/property__c/fields/zyutyusaki__c.field-meta.xml
<CustomField>
    <fullName>zyutyusaki__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元請</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>zyutyusaki</relationshipName>
    <type>Lookup</type>
</CustomField>