force-app/main/default/objects/property__c/fields/zyutyusakigenbatantousya2__c.field-meta.xml
<CustomField>
    <fullName>zyutyusakigenbatantousya2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>元請現場担当者2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CS物件 (元請現場担当者2)</relationshipLabel>
    <relationshipName>zyutyusakigenbatantousya2</relationshipName>
    <type>Lookup</type>
</CustomField>