force-app/main/default/objects/property__c/recordTypes/Monthly_Target.recordType-meta.xml
<RecordType>
    <fullName>Monthly_Target</fullName>
    <active>true</active>
    <label>Monthly_Target</label>
</RecordType>