force-app/main/default/objects/property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field1__c</columns>
    <columns>CS_syoukaizumi__c</columns>
    <columns>zouhougen__c</columns>
    <columns>zyutyusaki__c</columns>
    <columns>zyutyukingaku__c</columns>
    <columns>zyutyusakigenbatantousya__c</columns>
    <columns>zyouhouteikyousya__c</columns>
    <columns>tyakkoubi__c</columns>
    <columns>syunkoubi__c</columns>
    <columns>CS_hasseibi__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>notContain</operation>
        <value>松井</value>
    </filters>
    <label>すべて選択</label>
</ListView>